--- a/ngAnimations/src/app/app.component.html
+++ b/ngAnimations/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div style="padding: 20px">
   <h1>Animation Angular</h1>
-  <button mat-raised-button color="accent">Animer une fois</button>
-  <button mat-raised-button color="accent">Animer en boucle</button>
-  <div class="square" style="background-color: red;"></div>
+  <button (click)="animerUneFois()" mat-raised-button color="accent">Animer une fois</button>
+  <button (click)="animerEnBoucle()" mat-raised-button color="accent">Animer en boucle</button>
+  <div [@shake]="shakeV" class="square" style="background-color: red;"></div>
 
-  <div class="square" style="background-color: green;"></div>
+  <div [@bounce]="bounceV" class="square" style="background-color: green;"></div>
 
-  <div class="square" style="background-color: blue;"></div>
+  <div [@tada]="tadaV" class="square" style="background-color: blue;"></div>
 </div>
 <div style="padding: 20px">
   <h1>Animation CSS</h1>
-  <button mat-raised-button color="accent">Faire tourner</button>
-  <div class="square" style="background-color:orange;"></div>
+  <button (click)="turnMe()" mat-raised-button color="accent">Faire tourner</button>
+  <div [class.rotate-left]="turn" class="square" style="background-color:orange;"></div>
 </div>
